--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
         <nav id="navbar">
              <ul>
-                 <li><a href="Inicio">Inicio</a></li>
-                 <li><a href="Nostros">Nostros</a></li>
-                 <li><a href="Proyectos">Proyectos</a></li>
-                 <li><a href="Testimonios">Testimonios</a></li>
+                 <li><a href="#Inicio">Inicio</a></li>
+                 <li><a href="#Nostros">Nostros</a></li>
+                 <li><a href="#Proyectos">Proyectos</a></li>
+                 <li><a href="#Testimonios">Testimonios</a></li>
             </ul>
         </nav>
     </header>
