--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="estilos.css">
+
     <title>Idly web</title>
 </head>
 <body>
-    <img src="img/girl.jpg" alt="" width="100%">
+    <img class="imgFondo" src="img/girl.jpg" alt="" width="100%">
 
     <header>
 
@@ -25,15 +28,15 @@
 
     <section id="Inicio">
         <p id="principal">
-        Clean<span class="dot">.</span>Slick<span>.</span>Pixel Perfect
+        Clean<span class="dot">.</span>Slick<span class="dot">.</span>Pixel Perfect
         </p>
         <p class="secundario">
-        lldy is a great one-page theme, perfect for developers and designers but also for someone who just wants
+        lldy is a great one-page theme, perfect for developers and designers but also for someone who just wants<br>
         a new website for his business. Try it now!
         </p>
         <nav>
             <button class="boton" id="sabermas" type="submit">Saber más</button>
-            <button class="boton" id="Descargar" type="submit">Descargar</button>
+            <button class="boton" id="descargar" type="submit">Descargar</button>
             
         </nav>
     </section>
